docs: now it kinda looks decent
